--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
+    "express-validation": "^4.1.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.1.2",
     "nodemon": "^2.0.20",
